[package]
name = "listen-tracing"
version = "0.1.0"
edition = "2021"
description = "systemd-compat tracing setup"
license = "MIT"

[dependencies]
tracing-journald = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
bb8-redis = "0.20"
actix-web = { version = "4.0" }
actix-ws = "0.2"
thiserror = "1.0"
chrono = "0.4"
clickhouse = { version = "0.13", features = ["native-tls"] }
regex = "1.0"
url = "2.0"
